배포 스크립트 추가 및 Docker Compose 설정 수정: deploy.sh 파일 생성, Dockerfile 경로 지정, GitHub Actions를 통한 Synology 배포 워크플로우 추가, CORS 설정에 여러 도메인 추가.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,7 @@ services:
   backend:
     build:
       context: ./backend
+      dockerfile: Dockerfile
       target: production
     ports:
       - "5000:5000"
@@ -11,6 +12,7 @@ services:
   nginx:
     build:
       context: ./frontend
+      dockerfile: Dockerfile
       target: production
     container_name: nginx-prod
     ports:
