배포 스크립트 수정: 포트 5000을 사용 중인 프로세스 정리 로직 추가 및 deploy.sh 실행 방식 개선.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -150,9 +150,7 @@ jobs:
                 exit 1
               fi
 
-              chmod +x deploy.sh
-              export SYNOLOGY_HOST="$SYNOLOGY_HOST"
-              ./deploy.sh
+              chmod +x deploy.sh && ./deploy.sh
               
               echo "✅ 컨테이너 상태 확인"
               docker-compose -f docker-compose.prod.yml ps || true
