프론트엔드 포트 환경변수 추가: VITE_PORT 지원 및 .env.development 파일 로드

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ services:
     build:
       context: ./frontend
       target: development
+    environment:
+      - VITE_PORT=${VITE_PORT:-4501}
     ports:
-      - "4501:4501"
+      - "${VITE_PORT:-4501}:${VITE_PORT:-4501}"
     volumes:
       - ./frontend:/app
       - /app/node_modules
