--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,8 @@ COPY . .
 
 # ✅ 개발용
 FROM base AS development
-CMD ["npm", "run", "dev", "--", "--host", "--port", "4501"]
+ENV VITE_PORT=4501
+CMD sh -c "npm run dev -- --host --port ${VITE_PORT:-4501}"
 
 # ✅ 빌드용
 FROM base AS build
