fix: 개발 환경에 procps 패키지 추가하여 ps 명령어 오류 해결

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,7 @@ COPY . .
 
 # ✅ 개발용
 FROM base AS development
+RUN apt-get update && apt-get install -y procps && rm -rf /var/lib/apt/lists/*
 CMD ["npm", "run", "start:dev"]
 
 # ✅ 빌드용
