포트 변경 및 블루-그린 배포 설정 개선
- 백엔드 내부 포트 5500으로 통일
- 프론트엔드 포트 5401, 백엔드 포트 5501/5502, Nginx 포트 5400으로 변경
- 헬스체크 성공 후 이전 환경 자동 정리
- default.prod.conf를 .gitignore에 추가하여 배포 시 자동 생성 파일 무시

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,13 +1,31 @@
 services:
-  backend:
+  backend-blue:
     build:
       context: ./backend
       dockerfile: Dockerfile
       target: production
+    container_name: backend-blue
     ports:
-      - "4500:4500"
+      - "5501:5500"
+    environment:
+      - PORT=5500
     networks:
       - prod-network
+    restart: unless-stopped
+
+  backend-green:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+      target: production
+    container_name: backend-green
+    ports:
+      - "5502:5500"
+    environment:
+      - PORT=5500
+    networks:
+      - prod-network
+    restart: unless-stopped
 
   nginx:
     build:
@@ -15,15 +33,17 @@ services:
       dockerfile: Dockerfile
       target: production
     container_name: nginx-prod
+    depends_on:
+      - backend-blue
+      - backend-green
     ports:
-      - "8580:80"
+      - "5400:80"
     volumes:
       - ./nginx/default.prod.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - backend
     networks:
       - prod-network
+    restart: unless-stopped
 
 networks:
   prod-network:
-    driver: bridge
+    external: true
