--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,12 +12,13 @@ COPY . .
 
 # ✅ 개발용
 FROM base AS development
-ENV VITE_PORT=4501
-CMD sh -c "npm run dev -- --host --port ${VITE_PORT:-4501}"
+ENV VITE_PORT=5401
+CMD sh -c "npm run dev -- --host --port ${VITE_PORT:-5401}"
 
 # ✅ 빌드용
 FROM base AS build
 ENV NODE_ENV=production
+# .env.production 파일이 있으면 자동으로 로드됨
 RUN npm run build
 
 # ✅ 배포용 - Nginx로 정적 파일 서빙
