--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,12 @@ services:
       context: ./frontend
       target: development
     ports:
-      - "4501:4501"
+      - "5401:5401"
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    environment:
+      - VITE_PORT=5401
     networks:
       - dev-network
 
@@ -16,18 +18,19 @@ services:
       context: ./backend
       target: development
     ports:
-      - "4500:4500"
+      - "5501:5500"
     volumes:
       - ./backend:/app
       - /app/node_modules
+    environment:
+      - PORT=5500
     networks:
       - dev-network
 
   nginx:
     image: nginx:alpine
-    container_name: nginx-dev
     ports:
-      - "8580:80"
+      - "5400:80"
     volumes:
       - ./nginx/default.dev.conf:/etc/nginx/conf.d/default.conf
     depends_on:
